# clibtr

./: .gitignore  CMakeLists.txt  README.md  build32.bat  build64.bat  buildMake.sh
examples/: CMakeLists.txt
examples/programtr/: CMakeLists.txt  programtr.cpp  programtr_cmd.cpp  programtr_cmd.h
examples/readtr/: CMakeLists.txt  readtr.cpp
include/: HexFmtParser.h  TrIfc.h
src/: HexFmtParser.cpp  IqrfFmtParser.cpp  TrIfc.cpp  TrconfFmtParser.cpp
tr/: CMakeLists.txt
trshared/: CMakeLists.txt
